--- a/Project3/Project3_Part7.html
+++ b/Project3/Project3_Part7.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<style>
+    html{cursor:url("./Part7 Images/10.png"),auto;height:20%;}
+</style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,13 +15,13 @@
 <img class="mountain3" src="./Part7 Images/mountain3-03.png">
 <img class="mountain2" src="./Part7 Images/mountain2.png">
 <a href="./Project3_Part7(2).html"><img class="mountain1" src="./Part7 Images/mountain1-03.png"></a>
-<img class="stairs" src="./Part7 Images/stairs-03.png">
+<a href="./Project3_Part7(4).html"><img class="stairs" src="./Part7 Images/stairs-03.png"></a>
 <img class="glacier4" src="./Part7 Images/glacier4-03.png">
 <a href="./Project3_Part7(3).html"><img class="glacier" src="./Part7 Images/glacier-03.png"></a>
 <img class="glacier2" src="./Part7 Images/glacier2.png">
 <img class="glacier3" src="./Part7 Images/crystal3-03.png">
 
-<img class="pile" src="./Part7 Images/pile-03.png">
+<a href="./Project3_Part7(5).html"><img class="pile" src="./Part7 Images/pile-03.png"></a>
 <div class="scene1">He</div>
 <div class="scene1a">climbed</div>
 <div class="scene1b">over</div>
@@ -29,11 +31,22 @@
 <div class="scene2a">through</div>
 <div class="scene2b">the</div>
 <div class="scene2c">glacier</div>
-<div class="title">Treasure Hunt -></div>
+<div class="scene3">Went</div>
+<div class="scene3a">down</div>
+<div class="scene3b">the</div>
+<div class="scene3c">steep</div>
+<div class="scene3d">ice</div>
+<div class="scene3e">stairs</div>
+<div class="sign">
+    <span class="fast-flicker">Look</span ><span class="what">what</span><span class="flicker">we</span><span class="found">found</span>
+  </div>
 
 
-<main id="app"> 
-<div id="Crystal">
+
+<div id="scroll-container">
+    <div class="scroll-text" id="scroll">Treasure Hunt-><div>
+  </div>
+    
 </div>
 </main>
 </body>
